# pushmi

./: .gitattributes  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  Readme.md  TARGETS  buildSingleHeader.cmake  install_libcxx.sh
benchmarks/: CMakeLists.txt  PushmiBenchmarks.cpp  report.html  runner.cpp
examples/: CMakeLists.txt  bulk.h  for_each.h  no_fail.h  pool.h  readme.md  reduce.h
examples/composition/: composition_2.cpp  composition_3.cpp  composition_4.cpp
examples/for_each/: for_each_2.cpp  for_each_3.cpp
examples/include/: pool.h
examples/reduce/: reduce_2.cpp  reduce_3.cpp
examples/set_done/: set_done_2.cpp
examples/set_error/: set_error_2.cpp
examples/then_execute/: then_execute_2.cpp
examples/twoway_execute/: twoway_execute_2.cpp
include/: pushmi-single-footer.h  pushmi-single-header.h  pushmi.h
include/pushmi/: boosters.h  concepts.h  deferred.h  entangle.h  executor.h  extension_points.h  flow_many_sender.h  flow_receiver.h  flow_single_sender.h  forwards.h  inline.h  many_sender.h  new_thread.h  piping.h  properties.h  receiver.h  single.h  single_sender.h  strand.h  subject.h  time_source.h  traits.h  trampoline.h
include/pushmi/detail/: concept_def.h  functional.h  if_constexpr.h  opt.h
include/pushmi/o/: async.h  defer.h  empty.h  error.h  extension_operators.h  filter.h  for_each.h  from.h  just.h  on.h  request_via.h  schedule.h  share.h  submit.h  switch_on_error.h  tap.h  transform.h  via.h
test/: AsyncTest.cpp  CMakeLists.txt  CompileTest.cpp  FlowManyTest.cpp  FlowTest.cpp  NewThreadTest.cpp  PushmiTest.cpp  TrampolineTest.cpp  catch.cpp
